--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,18 +5,21 @@
         </div>
         <div class="auth-form">
             <h2>Sign In</h2>
+            <% if (message) { %>
+                <p><%= message %> </p>
+            <% } %>
             <div class="form-wraper">
-                <form action="">
+                <form action="/login" method="POST">
                     <div class="form-group">
                         <label for="">Email</label>
-                        <input type="text">
+                        <input name="email" type="text">
                     </div>
                     <div class="form-group">
                         <label for="">Password</label>
-                        <input type="password">
+                        <input name="password" type="password">
                     </div>
                     <div class="form-group">
-                        <button>Log In</button>
+                        <button type="submit">Log In</button>
                     </div>
                 </form>
             </div>
